@@ -1,19 +1,19 @@
-Source: gpicview
+Source: inhulview
 Section: graphics
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: Andrew Lee <andrew@linux.org.tw>
-Build-Depends: debhelper (>= 5), libgtk2.0-dev, libjpeg62-dev, intltool, autotools-dev
+Build-Depends: debhelper (>= 5), libgtk3.0-dev, libjpeg62-dev, intltool, autotools-dev
 Standards-Version: 3.8.1
 DM-Upload-Allowed: yes
-Homepage: http://lxde.org
+Homepage: http://github.com/FlaviusHouk/gpicview
 
-Package: gpicview
+Package: inhulview
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: xdg-utils
 Description: lightweight image viewer
- GPicView is a lightweight GTK+ 2.x based image viewer with following features:
+ InhulView is a lightweight GTK+ 3.x based image viewer with following features:
  .
   * Extremely lightweight and fast with low memory usage
   * Very suitable for default image viewer of desktop system
