@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH GPICVIEW 1 "Sep 10, 2007"
+.TH INHULVIEW 1 "Sep 10, 2007"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,19 +16,19 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-gpicview \- lightweight image viewer
+inhulview \- lightweight image viewer
 .SH SYNOPSIS
-.B gpicview
+.B inhulview
 .RI [ options ] " file"
 .SH DESCRIPTION
 This manual page documents briefly the
-.B gpicview
+.B inhulview
 command.
 .PP
 .\" TeX users may be more comfortable with the \fB<whatever>\fP and
 .\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
 .\" respectively.
-\fBgpicview\fP is a simple image viewer that features:
+\fBinhulview\fP is a simple image viewer that features:
   * Extremely lightweight and fast with low memory usage
   * Very suitable for default image viewer of desktop system
   * Simple and intuitive interface
