@@ -1,1 +1,1 @@
-debian/gpicview.1
+debian/inhulview.1
