@@ -1,3 +1,6 @@
+2021-11-01  Flavius Houk <flaviusglamfenix@gmail.com>
+	Fork for original gpicview code base.
+
 2009-04-05  Juergen Hoetzel  <juergen@archlinux.org>
 
 	* src/main-win.c (on_key_press_event): Fix #2613481 (Proper
